# project-x

./: .gitignore  README.md
backend/: .gitignore  README_delivery_predictor.md  app.py  best_delivery_time_predictor.py  chatbot_assistant.py  delivery_predictor.py  delivery_predictor_requirements.txt  delivery_time_predictor_demo.py  gemini_api.py  install_deps.sh  pyproject.toml  pytest.ini
backend/docs/: api.md
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_delivery_system.py
backend/tests/unit/: __init__.py  test_app.py  test_chatbot_assistant.py  test_delivery_predictor.py  test_gemini_api.py
frontend/: API.md  PLAN.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: config.ts  index.ts  mockData.ts  mutations.ts  queries.ts  types.ts
frontend/src/components/: Layout.tsx  Navbar.tsx  PageTransition.tsx
frontend/src/components/Map/: Map.css  Map.tsx  MapView.tsx  RouteMap.tsx  RouteMetrics.tsx  index.ts
frontend/src/components/auth/: ClerkProvider.tsx  ProtectedRoute.tsx  UserProfile.tsx
frontend/src/components/motion/: MotionElements.tsx  README.md
frontend/src/components/ui/: loading.tsx
frontend/src/hooks/: index.ts  useAuthUser.ts  useRouteCalculation.ts
frontend/src/lib/: auth-context.tsx  distance-utils.ts  mockData.ts  mockHooks.ts  motion-context.tsx  motion-variants.ts  utils.ts
frontend/src/pages/: AddDelivery.tsx  ChatAssistant.tsx  Dashboard.tsx  DeliveryPrediction.tsx  Home.tsx  NotFound.tsx  OptimizeRoute.tsx
(+2 files in other folders)
